// The RPC for interacting with the Aggregation DB
syntax = "proto3";

package aggregation;

service AggregationService {
    // Get the merkle proof for a given proof
    rpc GetAggregatedData(GetAggregatedDataRequest) returns (GetAggregatedDataResponse) {}
    // Creates an aggregation request
    rpc AggregateProof(AggregateProofRequest) returns (AggregateProofResponse) {}
    // Get a batch of proofs that have not yet been aggregated
    rpc GetBatch(GetBatchRequest) returns (GetBatchResponse) {}
    // Write a merkle tree to the database
    rpc WriteMerkleTree(WriteMerkleTreeRequest) returns (WriteMerkleTreeResponse) {}
    // Process a batch of proofs
    rpc ProcessBatch(ProcessBatchRequest) returns (ProcessBatchResponse) {}
}

message GetAggregatedDataRequest {
    // The proof id to get the merkle proof for
    bytes proof_id = 1;
}

message GetAggregatedDataResponse {
    // The merkle proof for the given account
    repeated bytes proof = 1;
    // Status of the call
    ResponseStatus status = 2;
}

message AggregateProofRequest {
    // The proof to aggregate
    bytes proof = 1;
    // The corresponding vk
    bytes vk = 2;
}

message GetBatchRequest {
    // The unix timestamp to get all proof requests created after
    uint64 created_after = 1;
    // The number of proofs to return (default is 32)
    optional uint64 batch_size = 2;
}

message GetBatchResponse {
    // The list of proof requests
    repeated ProofRequest proofs = 1;
    // The identifier of the batch
    bytes batch_id = 2;
}

message ProcessBatchRequest {
    // The list of proof requests to process
    repeated ProofRequest proofs = 1;
    // The identifier of the batch
    bytes batch_id = 2;
}

message ProcessBatchResponse {
    // The leaves of the merkle tree generated from the batch
    bytes leaves = 1;
}

message WriteMerkleTreeRequest {
    // The merkle tree to write
    bytes tree = 1;
    // The identifier of the batch
    bytes batch_id = 2;
}

message WriteMerkleTreeResponse {
    // Indicates if the write was successful
    bool success = 1;
}


message ProofRequest {
    // The identifier of the proof
    bytes proof_id = 1;
    // The aggregation status of the proof
    AggregationStatus status = 2;
    // The proof resourse identifier
    bytes proof = 3;
    // The corresponding vk resource identifier
    bytes vk = 4;
    // The unix timestamp of when the request was created
    uint64 created_at = 5;
}

message AggregateProofResponse {
    // The identifier of the proof
    bytes proof_id = 1; 
}

enum AggregationStatus {
    UNSPECIFIED_AGGREGATION_STATUS = 0;
    // The proof is pending aggregation
    PENDING = 1;
    // The proof has been aggregated
    AGGREGATED = 2;
    // The proof has been verified
    VERIFIED = 3;
    // The proof verification failed
    FAILED = 4;
}

enum ResponseStatus {
    UNSPECIFIED_RESPONSE_STATUS = 0;
    // Proof hash was not found
    NOT_FOUND = 1;
    // Proof hash was found but not yet aggregated  
    AGGREGATION_PENDING = 2;
    // Proof hash was found and aggregated
    AGGREGATION_COMPLETE = 3;
}
